# glide

./: Cargo.toml  README.md
crates/glide/: Cargo.toml
crates/glide/src/: lib.rs
crates/glide_ast/: Cargo.toml
crates/glide_ast/src/: def.rs  expr.rs  lib.rs  path.rs  stmt.rs  ty.rs
crates/glide_bytecode/: Cargo.toml
crates/glide_bytecode/src/: lib.rs
crates/glide_cli/: Cargo.toml
crates/glide_cli/src/: lib.rs  main.rs
crates/glide_codegen/: Cargo.toml
crates/glide_codegen/src/: lib.rs
crates/glide_codegen/tests/: fibonacci.rs
crates/glide_codegen_llvm/: Cargo.toml
crates/glide_codegen_llvm/src/: lib.rs
crates/glide_compiler/: Cargo.toml
crates/glide_compiler/src/: attribute.rs  engine.rs  error.rs  func.rs  lib.rs  namespace.rs  package.rs  registry.rs  struc.rs  ty.rs  ty_constr.rs  value.rs  visibility.rs
crates/glide_compiler/tests/: fibonacci.rs  funcs.rs
crates/glide_ir/: Cargo.toml
crates/glide_ir/src/: lib.rs
crates/glide_lower/: Cargo.toml
crates/glide_lower/src/: lib.rs  strings.rs
crates/glide_parser/: Cargo.toml
crates/glide_parser/src/: lib.rs
crates/glide_parser/tests/: functions.rs  strings.rs  vars.rs
crates/glide_span/: Cargo.toml
crates/glide_span/src/: lib.rs  source.rs
crates/glide_vm/: Cargo.toml
crates/glide_vm/src/: alloc.rs  lib.rs  object.rs
examples/: attributes.gl  fibonacci.gl  functions.gl  hello.gl  identity.gl  if.gl  not.gl  return.gl  structs.gl  vars.gl
lib/: core.gl  prelude.gl
